// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PortfolioGrid desktop breakpoint (lg) > baseline: single card markup at desktop 1`] = `
<div
  class="rounded-lg border bg-card text-card-foreground shadow-sm overflow-hidden h-full transition-all duration-300 hover:shadow-lg hover:-translate-y-1"
>
  <div
    class="relative aspect-video overflow-hidden"
  >
    <img
      alt="Sayeed Bernard"
      class="w-full h-full object-cover transition-transform duration-300 hover:scale-105"
      loading="lazy"
      src="/lovable-uploads/sayeed-bernard.png"
    />
    <div
      class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent text-primary-foreground hover:bg-primary/80 absolute top-3 right-3 bg-mtechBlue-800"
    >
      Web Development
    </div>
  </div>
  <div
    class="flex flex-col space-y-1.5 p-5 sm:p-6"
  >
    <h3
      class="font-semibold tracking-tight text-lg sm:text-xl text-mtechNavy"
    >
      Sayeed Bernard
    </h3>
    <p
      class="text-muted-foreground text-sm sm:text-base"
    >
      Attorney-at-Law website.
    </p>
  </div>
  <div
    class="p-5 sm:p-6 pt-0"
  >
    <div
      class="flex flex-wrap gap-2 mb-1"
    >
      <div
        class="inline-flex items-center rounded-full border px-2.5 py-0.5 font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 text-foreground bg-mtechGray-50 text-xs"
      >
        WordPress
      </div>
      <div
        class="inline-flex items-center rounded-full border px-2.5 py-0.5 font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 text-foreground bg-mtechGray-50 text-xs"
      >
        PHP
      </div>
    </div>
  </div>
  <div
    class="items-center flex justify-center sm:justify-end p-5 sm:p-6 pt-0"
  >
    <a
      class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 active:scale-[0.97] border border-input bg-background hover:bg-accent hover:text-accent-foreground h-10 px-4 py-2 gap-2 w-full sm:w-auto"
      href="https://sayeedbernard.com/"
      rel="noopener noreferrer"
      target="_blank"
    >
      Visit Site 
      <svg
        class="lucide lucide-external-link"
        fill="none"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M15 3h6v6"
        />
        <path
          d="M10 14 21 3"
        />
        <path
          d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"
        />
      </svg>
    </a>
  </div>
</div>
`;

exports[`PortfolioGrid tablet breakpoint (md) > baseline: three-card grid markup at tablet and up 1`] = `
<section
  class="py-12 sm:py-16 bg-white"
>
  <div
    class="container px-4 sm:px-6 lg:px-8 mx-auto"
  >
    <div
      class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 sm:gap-8"
    >
      <div
        class="rounded-lg border bg-card text-card-foreground shadow-sm overflow-hidden h-full transition-all duration-300 hover:shadow-lg hover:-translate-y-1"
      >
        <div
          class="relative aspect-video overflow-hidden"
        >
          <img
            alt="Vanessa Russell's Portfolio"
            class="w-full h-full object-cover transition-transform duration-300 hover:scale-105"
            loading="lazy"
            src="/lovable-uploads/vanessa.png"
          />
          <div
            class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent text-primary-foreground hover:bg-primary/80 absolute top-3 right-3 bg-mtechBlue-800"
          >
            Web Development
          </div>
        </div>
        <div
          class="flex flex-col space-y-1.5 p-5 sm:p-6"
        >
          <h3
            class="font-semibold tracking-tight text-lg sm:text-xl text-mtechNavy"
          >
            Vanessa Russell's Portfolio
          </h3>
          <p
            class="text-muted-foreground text-sm sm:text-base"
          >
            Personal portfolio website.
          </p>
        </div>
        <div
          class="p-5 sm:p-6 pt-0"
        >
          <div
            class="flex flex-wrap gap-2 mb-1"
          >
            <div
              class="inline-flex items-center rounded-full border px-2.5 py-0.5 font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 text-foreground bg-mtechGray-50 text-xs"
            >
              React
            </div>
            <div
              class="inline-flex items-center rounded-full border px-2.5 py-0.5 font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 text-foreground bg-mtechGray-50 text-xs"
            >
              Tailwind
            </div>
          </div>
        </div>
        <div
          class="items-center flex justify-center sm:justify-end p-5 sm:p-6 pt-0"
        >
          <a
            class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 active:scale-[0.97] border border-input bg-background hover:bg-accent hover:text-accent-foreground h-10 px-4 py-2 gap-2 w-full sm:w-auto"
            href="https://vanessa.mtechcorpja.com/"
            rel="noopener noreferrer"
            target="_blank"
          >
            Visit Site 
            <svg
              class="lucide lucide-external-link"
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15 3h6v6"
              />
              <path
                d="M10 14 21 3"
              />
              <path
                d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"
              />
            </svg>
          </a>
        </div>
      </div>
      <div
        class="rounded-lg border bg-card text-card-foreground shadow-sm overflow-hidden h-full transition-all duration-300 hover:shadow-lg hover:-translate-y-1"
      >
        <div
          class="relative aspect-video overflow-hidden"
        >
          <img
            alt="Sayeed Bernard"
            class="w-full h-full object-cover transition-transform duration-300 hover:scale-105"
            loading="lazy"
            src="/lovable-uploads/sayeed-bernard.png"
          />
          <div
            class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent text-primary-foreground hover:bg-primary/80 absolute top-3 right-3 bg-mtechBlue-800"
          >
            Web Development
          </div>
        </div>
        <div
          class="flex flex-col space-y-1.5 p-5 sm:p-6"
        >
          <h3
            class="font-semibold tracking-tight text-lg sm:text-xl text-mtechNavy"
          >
            Sayeed Bernard
          </h3>
          <p
            class="text-muted-foreground text-sm sm:text-base"
          >
            Attorney-at-Law website.
          </p>
        </div>
        <div
          class="p-5 sm:p-6 pt-0"
        >
          <div
            class="flex flex-wrap gap-2 mb-1"
          >
            <div
              class="inline-flex items-center rounded-full border px-2.5 py-0.5 font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 text-foreground bg-mtechGray-50 text-xs"
            >
              WordPress
            </div>
            <div
              class="inline-flex items-center rounded-full border px-2.5 py-0.5 font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 text-foreground bg-mtechGray-50 text-xs"
            >
              PHP
            </div>
          </div>
        </div>
        <div
          class="items-center flex justify-center sm:justify-end p-5 sm:p-6 pt-0"
        >
          <a
            class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 active:scale-[0.97] border border-input bg-background hover:bg-accent hover:text-accent-foreground h-10 px-4 py-2 gap-2 w-full sm:w-auto"
            href="https://sayeedbernard.com/"
            rel="noopener noreferrer"
            target="_blank"
          >
            Visit Site 
            <svg
              class="lucide lucide-external-link"
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15 3h6v6"
              />
              <path
                d="M10 14 21 3"
              />
              <path
                d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"
              />
            </svg>
          </a>
        </div>
      </div>
      <div
        class="rounded-lg border bg-card text-card-foreground shadow-sm overflow-hidden h-full transition-all duration-300 hover:shadow-lg hover:-translate-y-1"
      >
        <div
          class="relative aspect-video overflow-hidden"
        >
          <img
            alt="Reps and Results"
            class="w-full h-full object-cover transition-transform duration-300 hover:scale-105"
            loading="lazy"
            src="/lovable-uploads/reps-and-results.png"
          />
          <div
            class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent text-primary-foreground hover:bg-primary/80 absolute top-3 right-3 bg-mtechBlue-800"
          >
            Web Development
          </div>
        </div>
        <div
          class="flex flex-col space-y-1.5 p-5 sm:p-6"
        >
          <h3
            class="font-semibold tracking-tight text-lg sm:text-xl text-mtechNavy"
          >
            Reps and Results
          </h3>
          <p
            class="text-muted-foreground text-sm sm:text-base"
          >
            Fitness coaching platform.
          </p>
        </div>
        <div
          class="p-5 sm:p-6 pt-0"
        >
          <div
            class="flex flex-wrap gap-2 mb-1"
          >
            <div
              class="inline-flex items-center rounded-full border px-2.5 py-0.5 font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 text-foreground bg-mtechGray-50 text-xs"
            >
              React
            </div>
            <div
              class="inline-flex items-center rounded-full border px-2.5 py-0.5 font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 text-foreground bg-mtechGray-50 text-xs"
            >
              Supabase
            </div>
          </div>
        </div>
        <div
          class="items-center flex justify-center sm:justify-end p-5 sm:p-6 pt-0"
        >
          <a
            class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 active:scale-[0.97] border border-input bg-background hover:bg-accent hover:text-accent-foreground h-10 px-4 py-2 gap-2 w-full sm:w-auto"
            href="https://reps.mtechcorpja.com/"
            rel="noopener noreferrer"
            target="_blank"
          >
            Visit Site 
            <svg
              class="lucide lucide-external-link"
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15 3h6v6"
              />
              <path
                d="M10 14 21 3"
              />
              <path
                d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"
              />
            </svg>
          </a>
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`PortfolioSearch responsive layout > baseline: filter bar markup 1`] = `
<section
  class="py-10 bg-mtechGray-50"
>
  <div
    class="container px-4 sm:px-6 lg:px-8 mx-auto"
  >
    <div
      class="flex flex-col md:flex-row justify-between items-center gap-6"
    >
      <div
        class="w-full max-w-md relative"
      >
        <svg
          class="lucide lucide-search absolute left-3 top-1/2 transform -translate-y-1/2 text-mtechGray-500"
          fill="none"
          height="18"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="11"
            cy="11"
            r="8"
          />
          <path
            d="m21 21-4.3-4.3"
          />
        </svg>
        <input
          class="flex h-10 w-full rounded-md border border-input bg-background px-3 py-2 text-base ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium file:text-foreground placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 md:text-sm pl-10"
          placeholder="Search projects..."
          type="search"
          value=""
        />
      </div>
      <div
        class="flex flex-wrap gap-2"
      >
        <button
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 active:scale-[0.97] text-primary-foreground h-10 px-4 py-2 bg-mtechBlue-800 hover:bg-mtechBlue-900"
        >
          All
        </button>
        <button
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 active:scale-[0.97] border bg-background hover:bg-accent hover:text-accent-foreground h-10 px-4 py-2 border-mtechGray-300 text-mtechGray-700"
        >
          Web Development
        </button>
      </div>
    </div>
  </div>
</section>
`;
